updated the styling and added links to other pages

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+    <a class="links" href="contact.html">Contact</a>
+    <a class="links" href="portfolio.html">Portfolio</a>
+    <a class="links" href="index.html">Index</a>
+
+
+    <div>
     <h1>Cody Tracey</h1>
     <h2>About Me</h2>
     <p>
@@ -23,6 +29,7 @@
             <li>Fact 3</li>
         </ul>
     </p>
-    
+    </div>
+
 </body>
 </html>
