added the background image, working on the header

--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
+        
+        <!--Header Section-->
+    <div class="header">
+        <!--Links to other Pages-->
+        <a class="links" href="contact.html">Contact</a>
+        <a class="links" href="portfolio.html">Portfolio</a>
+        <a class="links" href="index.html">About</a>
+        <h1 class="my-name">Cody Tracey</h1>
+    </div>
+
 <body>
-    <a class="links" href="contact.html">Contact</a>
-    <a class="links" href="portfolio.html">Portfolio</a>
-    <a class="links" href="index.html">Index</a>
+   
+  <div>     
+    
 
-
-    <div>
-    <h1>Cody Tracey</h1>
     <h2>About Me</h2>
     <p>
         My name is Cody Tracey, I have a double bachelors in Classical Studies and Religious Studies.
