added in css link and submit button

--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>COntact Page</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<div class="header">
+        <!--Links to other Pages-->
+        <a class="links" href="contact.html">Contact</a>
+        <a class="links" href="portfolio.html">Portfolio</a>
+        <a class="links" href="index.html">About</a>
+        <h1 class="my-name">Cody Tracey</h1>
+</div>
+
 <div class="container">
     <h2>Contact</h2>
         <form action="/action_page.php">
@@ -7,11 +25,12 @@
             <input type="text" id="email" name="email" placeholder="Email">
             <label for="message">Message</label>
                 <textarea id="message" name="message" placeholder="" style="height: 170px"></textarea>
+                <input type="submit" value="Submit">
     </form>
-
-
-
-
-
 </div>
+
+<body>
+    
+</body>
+</html>
 
