--- a/portfolio.html
+++ b/portfolio.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Document</title>
 </head>
-<!--Header Section-->
-<div class="header">
+  <!--Header Section-->
+  <div class="header">
         <!--Links to other Pages-->
-        <a class="links" href="contact.html">Contact</a>
-        <a class="links" href="portfolio.html">Portfolio</a>
-        <a class="links" href="index.html">About</a>
+        <a class="links" href="contact.html">Contact </a>
+        <a class="links" href="portfolio.html">Portfolio &#8739</a>
+        <a class="links" href="index.html">About &#8739</a>
         <h1 class.my-name>Cody Tracey</h1>
     </div>
 <body>
-    
+    <div>
+
+        <h2>Portfolio</h2>
+
+     </div>
 </body>
 </html>
