--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <style>
+             .grid {
+                column-count: 2;
+             }
+    </style> 
     <title>Document</title>
 </head>
   <!--Header Section-->
@@ -19,7 +24,13 @@
     <div>
 
         <h2>Portfolio</h2>
-
+            <div class="grid">
+                <img src="assets/images/project1.jpg">
+                <img src="assets/images/project2.jpg">
+                <img src="assets/images/project3.jpg">
+                <img src="assets/images/project4.jpg">
+                <img src="assets/images/project5.jpg">
+            </div>
      </div>
 </body>
 </html>
