worked on styling header

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <a class="links" href="contact.html">Contact </a>
         <a class="links" href="portfolio.html">Portfolio &#8739</a>
         <a class="links" href="index.html">About &#8739</a>
-        <h1 class.my-name>Cody Tracey</h1>
+        <h1 class="my-name">Cody Tracey</h1>
     </div>
 
     <!--Contact Form-->
@@ -31,7 +31,6 @@
     <h2>Contact</h2>
     <div class="container">
         
-                
             <form action="/action_page.php">
                 <label for="fname">Name</label>
                 <input type="text" id="fname" name="fullname" placeholder="Your name">
