--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="links" href="contact.html">Contact </a>
         <a class="links" href="portfolio.html">Portfolio &#8739</a>
         <a class="links" href="index.html">About &#8739</a>
-        <h1 class.my-name>Cody Tracey</h1>
+        <h1 class="my-name">Cody Tracey</h1>
         
     </div>
 
