--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
              }
     </style> 
     <title>Document</title>
+    
 </head>
   <!--Header Section-->
   <div class="header">
@@ -18,8 +19,9 @@
         <a class="links" href="contact.html">Contact </a>
         <a class="links" href="portfolio.html">Portfolio &#8739</a>
         <a class="links" href="index.html">About &#8739</a>
-        <h1 class.my-name>Cody Tracey</h1>
+        <h1 class="my-name">Cody Tracey</h1>
     </div>
+
 <body>
     <div>
 
