--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,15 @@
         <h2>Portfolio</h2>
             <div class="grid">
                 <img src="assets/images/project1.jpg">
+                    <div class="absolute">project1</div>
                 <img src="assets/images/project2.jpg">
+                     <div class="absolute">project2</div>
                 <img src="assets/images/project3.jpg">
+                    <div class="absolute">project3</div>
                 <img src="assets/images/project4.jpg">
+                    <div class="absolute">project4</div>
                 <img src="assets/images/project5.jpg">
+                    <div class="absolute">project5</div>
             </div>
      </div>
 </body>
