corrected the css for the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,21 +25,30 @@
         <a class="links" href="index.html">About &#8739</a>
         <h1 class="my-name">Cody Tracey</h1>
     </div>
-    <div>
-
-        <h2>Portfolio</h2>
-            <div class="grid">
-                <img src="assets/images/project1.jpg">
+    <div>  
+        <span>   
+        <h2 class="stuff">Portfolio</h2>
+        <div class="superbox">
+            <div class="column">
+                    <img src="assets/images/project1.jpg">
                     <div class="absolute">project1</div>
-                <img src="assets/images/project2.jpg">
+                    <img src="assets/images/project2.jpg">
                      <div class="absolute">project2</div>
-                <img src="assets/images/project3.jpg">
-                    <div class="absolute">project3</div>
-                <img src="assets/images/project4.jpg">
-                    <div class="absolute">project4</div>
-                <img src="assets/images/project5.jpg">
-                    <div class="absolute">project5</div>
             </div>
-     </div>
+
+            <div class="column">
+                         <img src="assets/images/project3.jpg">
+                        <div class="absolute">project3</div>
+                        <img src="assets/images/project4.jpg">
+                        <div class="absolute">project4</div>
+            </div>
+            <div class="column">
+                        <img src="assets/images/project5.jpg">
+                        <div class="absolute">project5</div>
+             </div>
+                    
+        </div>
+    </span>  
+    </div>
 </body>
 </html>
