corrected margins/padding to line elements up

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
   <div class="header">
         <!--Links to other Pages-->
         <a class="links" href="contact.html">Contact </a>
-        <a class="links" href="portfolio.html">Portfolio &#8739</a>
-        <a class="links" href="index.html">About &#8739</a>
+        <a class="links" href="portfolio.html">Portfolio &#8739;</a>
+        <a class="links" href="index.html">About &#8739;</a>
         <h1 class="my-name">Cody Tracey</h1>
     </div>
     <div>  
@@ -30,20 +30,20 @@
         <h2 class="stuff">Portfolio</h2>
         <div class="superbox">
             <div class="column">
-                    <img src="assets/images/project1.jpg">
+                    <img src="assets/images/project1.jpg" alt="project 1">
                     <div class="absolute">project1</div>
-                    <img src="assets/images/project2.jpg">
+                    <img src="assets/images/project2.jpg" alt="project 2">
                      <div class="absolute">project2</div>
             </div>
 
             <div class="column">
-                         <img src="assets/images/project3.jpg">
+                         <img src="assets/images/project3.jpg" alt="project 3">
                         <div class="absolute">project3</div>
-                        <img src="assets/images/project4.jpg">
+                        <img src="assets/images/project4.jpg" alt="project 4">
                         <div class="absolute">project4</div>
             </div>
             <div class="column">
-                        <img src="assets/images/project5.jpg">
+                        <img src="assets/images/project5.jpg" alt="project 5">
                         <div class="absolute">project5</div>
              </div>
                     
