changes the project images, added the footer, perfected the header across all pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,25 +30,31 @@
         <h2 class="stuff">Portfolio</h2>
         <div class="superbox">
             <div class="column">
-                    <img src="assets/images/project1.jpg" alt="project 1">
-                    <div class="absolute">project1</div>
-                    <img src="assets/images/project2.jpg" alt="project 2">
-                     <div class="absolute">project2</div>
+                    <img src="assets/images/1.jpg" alt="project 1">
+                    <div class="absolute project-1">Hangman</div>
+                    <img src="assets/images/2.jpg" alt="project 2">
+                     <div class="absolute project-2">RPG Game</div>
             </div>
 
             <div class="column">
-                         <img src="assets/images/project3.jpg" alt="project 3">
-                        <div class="absolute">project3</div>
-                        <img src="assets/images/project4.jpg" alt="project 4">
-                        <div class="absolute">project4</div>
+                         <img src="assets/images/3.jpg" alt="project 3">
+                        <div class="absolute project-3">Trivia Game</div>
+                        <img src="assets/images/4.jpg" alt="project 4">
+                        <div class="absolute project-4">Rutgers Info Widget</div>
             </div>
             <div class="column">
-                        <img src="assets/images/project5.jpg" alt="project 5">
-                        <div class="absolute">project5</div>
+                        <img src="assets/images/5.jpg" alt="project 5">
+                        <div class="absolute project-5">Rock Paper Scissors</div>
              </div>
                     
         </div>
     </span>  
     </div>
+
+    <div class="footer">
+            <p class="bottom">Copyright</p>
+    </div>
+
+
 </body>
 </html>
