--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!--Header Section-->
-  <div class="header">
+  <div class="header2">
         <!--Links to other Pages-->
         <a class="links" href="contact.html">Contact </a>
         <a class="links" href="portfolio.html">Portfolio &#8739;</a>
@@ -33,6 +33,13 @@
             </form>
 
     </div>
+
+    <div class="footer">
+            <p class="bottom">Copyright</p>
+    </div>
+
+
+
 </div>
     
 </body>
