cleaned up code and inserted some comments

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-  <!--Header Section-->
-  <div class="header2">
+    <!--Header Section-->
+    <div class="header2">
         <!--Links to other Pages-->
         <a class="links" href="contact.html">Contact </a>
         <a class="links" href="portfolio.html">Portfolio &#8739;</a>
@@ -18,10 +18,9 @@
     </div>
 
     <!--Contact Form-->
-<div>
-    <h2>Contact</h2>
-    <div class="container">
-        
+    <div>
+        <h2>Contact</h2>
+        <div class="container">
             <form action="/action_page.php">
                 <label for="fname">Name</label>
                 <input type="text" id="fname" name="fullname" placeholder="Your name">
@@ -31,16 +30,13 @@
                     <textarea id="message" name="message" placeholder=""></textarea>
                     <input type="submit" value="Submit">
             </form>
-
+        </div>
     </div>
 
+    <!-- Footer Section -->
     <div class="footer">
-            <p class="bottom">Copyright</p>
+        <p class="bottom">Copyright</p>
     </div>
-
-
-
-</div>
     
 </body>
 </html>
