--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,17 @@
         <a class="links" href="index.html">About &#8739;</a>
         <h1 class="my-name">Cody Tracey</h1>
     </div>
+
+    <!--Portfolio Section-->
     <div>  
+        <!--I fully realize that I shouldn't use <span> in this way but its the only way I have found to get the code to work properly-->
         <span>   
         <h2 class="stuff">Portfolio</h2>
+        <!--Images and Labels for the portfolio-->
         <div class="superbox">
+
+            <!--Column 1-->
+
             <div class="column">
                     <img src="assets/images/1.jpg" alt="project 1">
                     <div class="absolute project-1">Hangman</div>
@@ -36,25 +43,30 @@
                      <div class="absolute project-2">RPG Game</div>
             </div>
 
+            <!--Column2-->
+
             <div class="column">
                          <img src="assets/images/3.jpg" alt="project 3">
                         <div class="absolute project-3">Trivia Game</div>
                         <img src="assets/images/4.jpg" alt="project 4">
                         <div class="absolute project-4">Rutgers Info Widget</div>
             </div>
+
+            <!--Column 3-->
+
             <div class="column">
                         <img src="assets/images/5.jpg" alt="project 5">
                         <div class="absolute project-5">Rock Paper Scissors</div>
-             </div>
-                    
+            </div>  
+
         </div>
-    </span>  
+        </span>  
     </div>
 
+    <!-- Footer Section -->
     <div class="footer">
             <p class="bottom">Copyright</p>
     </div>
-
 
 </body>
 </html>
