--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
         <div class="container">
             <form action="/action_page.php">
                 <label for="fname">Name</label>
-                <input type="text" id="fname" name="fullname" placeholder="Your name">
+                <input type="text" id="fname" name="fullname" placeholder="John Smith">
                 <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Email">
+                <input type="text" id="email" name="email" placeholder="example@gmail.com">
                 <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder=""></textarea>
                     <input type="submit" value="Submit">
