--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
             </p>
 
             <p>
-                While working full time, I am also attending the Vanderbilt/Trilogy Education Full Stack Web Developing Bootcamp, and upon completion I am hoping to transition into working in the IT world fulltime.  
-            </p>
-           
-            <p>
+                While working full time, I am also attending the Vanderbilt/Trilogy Education Full Stack Web Developing Bootcamp, and upon completion I am hoping to transition into working in the IT industry.  
                 For any inquires please do not hesitate to <a class="page-links" href='contact.html'>contact</a> me!
             </p>
     </div>
