--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,18 @@
             <!--Column 1-->
 
             <div class="column">
-                    <img src="assets/images/1.jpg" alt="project 1">
-                    <div class="absolute project-1">Hangman</div>
-                    <img src="assets/images/2.jpg" alt="project 2">
-                     <div class="absolute project-2">RPG Game</div>
+                    <a href="https://ctracey92.github.io/Word-Guess-Game/">
+                       <img src="assets/images/1.jpg" alt="project 1">
+                    <div class="absolute project-1">Hangman</div> 
+                    </a>
+                    
+                    <a href="https://ctracey92.github.io/unit-4-game/">
+                        <img src="assets/images/2.jpg" alt="project 2">
+                        <div class="absolute project-2">Gem Game</div>
+                    </a>
             </div>
 
             <!--Column2-->
-
             <div class="column">
                         <img src="assets/images/3.jpg" alt="project 3">
                         <div class="absolute project-3">Trivia Game</div>
