--- a/portfolio.html
+++ b/portfolio.html
@@ -52,9 +52,12 @@
 
             <!--Column2-->
             <div class="column">
+                    <a href="https://ctracey92.github.io/triviaGame/">
                         <img src="assets/images/3.jpg" alt="project 3">
-                        <div class="absolute project-3">Trivia Game</div>
-                        <img src="assets/images/4.jpg" alt="project 4">
+                    </a>
+                    <div class="absolute project-3">Trivia Game</div>
+                    
+                    <img src="assets/images/4.jpg" alt="project 4">
                         <div class="absolute project-4">Rutgers Info Widget</div>
             </div>
 
