--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,10 @@
                         <img src="assets/images/3.jpg" alt="project 3">
                     </a>
                     <div class="absolute project-3">Trivia Game</div>
-                    
-                    <img src="assets/images/4.jpg" alt="project 4">
-                        <div class="absolute project-4">Rutgers Info Widget</div>
+                    <a href="https://ctracey92.github.io/giphy/">
+                        <img src="assets/images/4.jpg" alt="project 4">
+                    </a>
+                    <div class="absolute project-4">Giphy API</div>
             </div>
 
             <!--Column 3-->
