added in project 1

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,12 @@
                     </a>
                         
                         <div class="absolute project-5">Train Scheduler</div>
+
+                        <a href="https://ctracey92.github.io/project1/">
+                            <img src="assets/images/5.jpg" alt="project 6">
+                        </a>
+                            
+                            <div class="absolute project-6">Foodbanx</div>
             </div>  
 
         </div>
